--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,7 +9,12 @@
 body {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
-  background-color: #f0f2f5
+  background-image: url('assets/images/photo-1530023367847-a683933f4172.avif'); 
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-attachment: fixed;
+  opacity: 0.8;
+  backdrop-filter: blur(5px);
 }
 
 a {
@@ -84,7 +89,7 @@ h3 {
 }
 
 .heading p {
-  color: #828282;
+  color:  #080808;
 }
 
 .invoices {
@@ -137,11 +142,12 @@ h3 {
 }
 
 .btn {
+  
   padding: 10px 20px;
-  border: 1px solid #000;
+  border: 1px solid #b5b5cc;
   border-radius: 5px;
-  background: #000;
-  color: #fff;
+  background:  #b5b5cc;
+  color:  #080808;
   font-size: 16px;
   font-weight: 700;
   cursor: pointer;
@@ -158,7 +164,7 @@ h3 {
 
 .btn-reverse {
   background: #fff;
-  color: #000;
+  color: #fff;
 }
 
 .btn-block {
@@ -213,4 +219,95 @@ h3 {
   .heading p {
     font-size: 1.5rem;
   }
+}
+
+.heading {
+  background-color: #b5b5cc;
+  color: e9b6dc;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 20px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+  margin: 20px auto;
+  max-width: 800px;
+  font-family: Arial, sans-serif;
+  /* opacity: 0.7;
+  backdrop-filter: blur(5px); */
+}
+footer {
+  background: #7e7eaa;
+  color:  #080808;
+  padding: 2rem;
+}
+
+.footer-content {
+  text-align: center;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-links a {
+  color:  #080808;
+  margin: 1rem;
+}
+.testimonial {
+  text-align: center;
+    background-color: #f0e4eb;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin: 20px auto;
+    max-width: 800px;
+    font-family: Arial, sans-serif;
+    /* opacity: 0.7;
+    backdrop-filter: blur(5px); */
+  }
+
+.testimonial img {
+  width: 100px;
+  border-radius: 50%;
+  /* border-radius: 50%; */
+  border: 3px solid #333;
+}
+
+.testimonial p {
+  font-size: 18px; 
+}
+.title {
+  font-size: xx-large;
+  color: #510a3c;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.search-container {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+input[type="text"] {
+  flex-grow: 1;
+  padding: 8px 10px;
+  outline: none;
+  border: none;
+}  
+
+button {
+  padding: 8px 14px;
+  background: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #0062cc;
 }
